Updated changes for consuming and processing the KYC in BO.